feat: adiciona funcionalidade ao recipe-detail

--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else notRecipeSelected" [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #notRecipeSelected>
+      <p>please select a recipe 😁</p>
+    </ng-template>
   </div>
 </div>
