feat: adiciona funcionalidade ao shopping list component

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-list-edit></app-shopping-list-edit>
+    <app-shopping-list-edit (ingridientAdded)="onIngridientAdded($event)"></app-shopping-list-edit>
     <hr>
     <ul class="list-group">
       <a
       href="#"
       class="list-group-item"
       style="cursor: pointer"
-      *ngFor="for let ingredient of ingredients">
+      *ngFor="let ingredient of ingredients">
       {{ingredient.name}} ({{ingredient.amount}})
     </a>
     </ul>
