--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -31,6 +31,10 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group">
+      <li class="list-group-item" *ngFor="let ingridient of recipe.ingridients">
+        {{ingridient.name}} - {{ingridient.amount}}
+      </li>
+    </ul>
   </div>
 </div>
