--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
     <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a href="#">To shopp list</a></li>
+        <li><a href="#" (click)="onAddShoppingItems(recipe.ingridients)">To shopp list</a></li>
         <li><a href="#">Edit</a></li>
         <li><a href="#">Delete</a></li>
       </ul>
