feat: adiciona uso do router no componente de recipe

--- a/src/app/recipe-book/recipe-book.component.html
+++ b/src/app/recipe-book/recipe-book.component.html
@@ -3,9 +3,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail *ngIf="selectedRecipe; else notRecipeSelected" [recipe]="selectedRecipe"></app-recipe-detail>
-    <ng-template #notRecipeSelected>
-      <p>please select a recipe 😁</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
