refactor: adiciona funcao de deletar ingridients

--- a/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -29,8 +29,8 @@
       <div class="row">
         <div class="col-xs-12">
           <button class="btn btn-success" type="submit" [disabled]="!form.valid">{{ editMode ? 'update' : 'add' }}</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-warning" type="button" (click)="formReset()">Clear</button>
+          <button class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
+          <button class="btn btn-warning" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
