--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -17,7 +17,7 @@
     <div class="btn-group" appDropdown>
       <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
-        <li><a (click)="onAddShoppingItems(recipe.ingridients)" style="cursor: pointer;">To shopp list</a></li>
+        <li><a (click)="onAddShoppingItems(recipe.ingredients)" style="cursor: pointer;">To shopp list</a></li>
         <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit</a></li>
         <li><a style="cursor: pointer;">Delete</a></li>
       </ul>
@@ -32,7 +32,7 @@
 <div class="row">
   <div class="col-xs-12">
     <ul class="list-group">
-      <li class="list-group-item" *ngFor="let ingridient of recipe.ingridients">
+      <li class="list-group-item" *ngFor="let ingridient of recipe.ingredients">
         {{ingridient.name}} - {{ingridient.amount}}
       </li>
     </ul>
