--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row margin-bottom">
           <button type="submit" class="btn btn-success margin-right">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
@@ -9,7 +9,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" class="form-control">
+            <input type="text" name="name" id="name" formControlName="name" class="form-control">
           </div>
         </div>
       </div>
@@ -17,7 +17,7 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imagePath">Image URL</label>
-            <input type="text" name="imagePath" id="imagePath" class="form-control">
+            <input type="text" name="imagePath" id="imagePath" formControlName="imagePath" class="form-control">
           </div>
         </div>
       </div>
@@ -34,6 +34,7 @@
              type="text"
              name="description"
              id="description"
+             formControlName="description"
              class="form-control"
              rows="6"
              >
@@ -42,13 +43,23 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row margin-bottom"
+          *ngFor="let ingredient of controls; let i=index"
+          [formGroupName]="i">
             <div class="col-xs-8">
-              <input type="text" class="form-control">
+              <input
+              type="text"
+              class="form-control"
+              formControlName="name"
+              >
             </div>
             <div class="col-xs-2">
-              <input type="number" class="form-control">
+              <input
+              type="number"
+              class="form-control"
+              formControlName="amount"
+              >
             </div>
             <div class="col-xs-2">
               <button type="button" class="btn btn-danger">X</button>
