--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.css
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.css
@@ -5,3 +5,7 @@
 .margin-bottom {
   margin-bottom: 1rem;
 }
+
+input.ng-invalid.ng-touched, textarea.ng-invalid.ng-touched {
+  border: 1px solid red;
+}
