--- a/src/app/recipe-book/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipe-book/recipe-edit/recipe-edit.component.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
       <div class="row margin-bottom">
-          <button type="submit" class="btn btn-success margin-right">Save</button>
+          <button type="submit" class="btn btn-success margin-right" [disabled]="!recipeForm.valid">Save</button>
           <button type="button" class="btn btn-danger">Cancel</button>
       </div>
       <div class="row">
