--- a/src/app/recipe-book/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe-book/recipe-detail/recipe-detail.component.html
@@ -18,8 +18,8 @@
       <button class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
       <ul class="dropdown-menu">
         <li><a (click)="onAddShoppingItems(recipe.ingredients)" style="cursor: pointer;">To shopp list</a></li>
-        <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit</a></li>
-        <li><a style="cursor: pointer;">Delete</a></li>
+        <li><a (click)="onEditRecipe()" style="cursor: pointer;">Edit</a></li>
+        <li><a (click)="onDeleteRecipe()" style="cursor: pointer;">Delete</a></li>
       </ul>
     </div>
   </div>
