--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,12 +6,15 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" *ngIf="isAuthenticate"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active" *ngIf="!isAuthenticate"><a routerLink="/auth">logIn</a></li>
         <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping List</a></li>
-        <li routerLinkActive="active"><a routerLink="/auth">logIn</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown" appDropdown>
+        <li *ngIf="isAuthenticate">
+          <a style="cursor: pointer">LogOut</a>
+        </li>
+        <li class="dropdown" *ngIf="isAuthenticate" appDropdown>
           <a class="dropdown-toggle" role="button"> Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer;" (click)="onSaveData()">Save Data</a></li>
