--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li *ngIf="isAuthenticate">
-          <a style="cursor: pointer">LogOut</a>
+          <a style="cursor: pointer" (click)="onLogout()">LogOut</a>
         </li>
         <li class="dropdown" *ngIf="isAuthenticate" appDropdown>
           <a class="dropdown-toggle" role="button"> Manage <span class="caret"></span></a>
